# mcp-python-interpreter

./: Dockerfile  pyproject.toml
.claude/: settings.local.json
mcp_python_interpreter/: main.py  server.py
