[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-python-interpreter"
version = "1.2.4"
description = "MCP server for Python code execution and environment management"
authors = [
    {name = "YZFly", email = "ethereal_ai@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-python-interpreter = "mcp_python_interpreter.main:main"

[project.urls]
"Homepage" = "https://github.com/yzfly/mcp-python-interpreter"
"Bug Tracker" = "https://github.com/yzfly/mcp-python-interpreter/issues"

[tool.setuptools]
packages = ["mcp_python_interpreter"]